--- a/mk_II/.svlint.toml
+++ b/mk_II/.svlint.toml
@@ -21,7 +21,7 @@ re_required_function = "^[a-z]+[a-z0-9_]*$"
 re_required_generateblock = "^[a-z]+[a-z0-9_]*$"
 re_required_genvar = "^[a-z]+[a-z0-9_]*$"
 re_required_instance = "^[a-z]+[a-z0-9_]*$"
-re_required_interface = "^[a-z]+[a-z0-9_]*$"
+re_required_interface = "^f_[a-z]+[a-z0-9_]*$"
 re_required_localparam = "^[A-Z]+[A-Z0-9_]*$"
 re_required_modport = "^[a-z]+[a-z0-9_]*$"
 re_required_module_ansi = "^[a-z]+[a-zA-Z0-9_]*$"
@@ -109,9 +109,9 @@ keyword_forbidden_wire_reg = false
 keyword_required_generate = true
 localparam_explicit_type = true
 localparam_type_twostate = true
-loop_statement_in_always_comb = true
-loop_statement_in_always_ff = true
-loop_statement_in_always_latch = true
+loop_statement_in_always_comb = false
+loop_statement_in_always_ff = false
+loop_statement_in_always_latch = false
 loop_variable_declaration = true
 lowercamelcase_interface = false
 lowercamelcase_module = false
@@ -207,13 +207,13 @@ style_keyword_end = false
 style_keyword_maybelabel = false
 style_keyword_new = true
 style_keyword_newline = false
-style_operator_arithmetic = true
-style_operator_arithmetic_leading_space = true
-style_operator_boolean = true
-style_operator_boolean_leading_space = true
-style_operator_integer = true
-style_operator_integer_leading_space = true
-style_operator_unary = true
+style_operator_arithmetic = false
+style_operator_arithmetic_leading_space = false
+style_operator_boolean = false
+style_operator_boolean_leading_space = false
+style_operator_integer = false
+style_operator_integer_leading_space = false
+style_operator_unary = false
 style_trailingwhitespace = true
 tab_character = true
 #unpacked_array = true
