--- a/mk_II/.svlint.toml
+++ b/mk_II/.svlint.toml
@@ -12,7 +12,7 @@ prefix_label = "l_"
 prefix_instance = "u_"
 prefix_module = "mod_"
 prefix_package = "pkg_"
-prefix_interface = "ifc_"
+prefix_interface = "Intf"
 re_required_assert = "^[a-z]+[a-z0-9_]*$"
 re_required_assert_property = "^[a-z]+[a-z0-9_]*$"
 re_required_checker = "^[a-z]+[a-z0-9_]*$"
