bullshit, LS totaly broken

--- a/mk_II/sw/Makefile
+++ b/mk_II/sw/Makefile
@@ -1,4 +1,4 @@
-source=$(wildcard *.S)
+source=$(wildcard tmp/*.S)
 objects=$(source:.S=.o)
 elfs=$(source:.S=.elf)
 dumps=$(source:.S=.dump)
@@ -6,8 +6,8 @@ dumps=$(source:.S=.dump)
 CFLAGS=-c -O0 -ffreestanding -nostartfiles -ffunction-sections -march=rv32im -mabi=ilp32
 LDFLAGS=-T link.ld -A elf32lriscv
 
-default: $(elfs) $(dumps) clean_obj
-	python ../../tools/elfhex.py -arb -s ./ -d ./
+default: $(elfs) $(dumps)
+	python ../../tools/elfhex.py -arb -s ./tmp/ -d ./hex/
 
 %.o : %.c
 	riscv32-unknown-elf-gcc $(CFLAGS) $< -o $@
@@ -15,16 +15,11 @@ default: $(elfs) $(dumps) clean_obj
 %.o : %.S
 	riscv32-unknown-elf-gcc $(CFLAGS) $< -o $@
 
-%.elf: $(objects)
+%.elf: %.o
 	riscv32-unknown-elf-ld $(LDFLAGS) $< -o $@
 
 %.dump : %.elf
 	riscv32-unknown-elf-objdump -D $< > $@
-	riscv32-unknown-elf-strip -R .comment -R .riscv.attributes -o $< $<
-	riscv32-unknown-elf-objdump -D $< > $@
-
-clean_obj:
-	rm $(objects)
 
 clean:
-	rm *.o *.hex *.mem *.dump
+	rm tmp/*.o tmp/*.hex tmp/*.mem tmp/*.dump tmp/*.elf
